2002-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* getfacl.c (permstr): Use `other' permission bits for requesting
	ace permissions.

2002-11-08  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (usage): Add missing LF.

2002-10-30  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (get_long_path_name_w32impl): Define similarly to
	GetLongPathName.
	(get_long_name): Correctly prototype GetLongPathName.
	(get_long_paths): Implement using get_long_name to cut down on code
	duplication.
	(doit): Do various things to make path output work predictably.

2002-10-19  Christopher Faylor  <cgf@redhat.com>

	* mount.cc (usage): Correctly report default mode.
	* strace.cc (main): Use strtoul as appropriate.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (close_arg): Remove unused static.
	* mkgroup.c (enum_local_users): Avoid compiler warning.
	(enum_users): Ditto.
	* mkpasswd.c: Ditto throughout.
	* ssp.c: Ditto throughout.

2002-09-18  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc: Include sys/time.h rather than time.h to avoid a
	compiler error.

2002-09-17  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc: Reorder includes to avoid compiler error.

2002-09-15  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>
	* cygcheck.cc (print_version) Add final newline.
	* getfacl.c (print_version) Add final newline.
	* kill.cc (print_version) Add final newline.
	* mkgroup.c (print_version) Add final newline.
	* mkpasswd.c (print_version) Add final newline.
	* mount.cc (print_version) Add final newline.
	* passwd.c (print_version) Add final newline.
	* ps.cc (print_version) Add final newline.
	* regtool.cc (print_version) Add final newline.
	* setfacl.c (print_version) Add final newline.
	* ssp.c (print_version) Add final newline.
	* strace.cc (print_version) Add final newline.
	* umount.cc (print_version) Add final newline.

2002-09-12  Igor Pechtchanski <pechtcha@cs.nyu.edu>
	* cygpath.cc (options) New global variable.